fix slider issue with click scroll basically check for overflows and hide them

--- a/src/containers/Slider/style.scss
+++ b/src/containers/Slider/style.scss
@@ -1,5 +1,9 @@
 @import "src/colors.scss";
 
+body {
+  overflow: hidden;
+}
+
 .SlideCardList {
   position: relative;
   width: 100%;
